[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "samud"
version = "0.1.0"
description = "San Antonio MUD - A telnet-based text adventure game"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Paul Parker" }]
license = { text = "MIT" }
dependencies = [
  "aiosqlite>=0.19.0",
  "bcrypt>=4.0.0"
]

# uv dependency groups (dev-only tooling lives here)
[dependency-groups]
dev = [
  "ruff>=0.5",
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "types-requests"
]

# ---- Tool configs (so you don't need extra dotfiles) ----
[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","RUF"]
lint.ignore = ["E203","E266"]
format.preview = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as an asyncio coroutine"
]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
