[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "your_package_name"
version = "0.1.0"
description = "Short description"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
license = { text = "MIT" }
dependencies = []  # runtime deps go here

# uv dependency groups (dev-only tooling lives here)
[dependency-groups]
dev = [
  "ruff>=0.5",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "types-requests"
]

# ---- Tool configs (so you don't need extra dotfiles) ----
[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E","F","I","UP","B","RUF"]
lint.ignore = ["E203","E266"]
format.preview = true

[tool.pytest.ini_options]
addopts = "-q --strict-markers --disable-warnings"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
